--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Desire Desk</title>
 
     <script src="js/phaser.js"></script>
+    <script src="js/InitMenu.js"></script>
     <script src="js/Boot.js"></script>
     <script src="js/Preloader.js"></script>
     <script src="js/StartMenu.js"></script>
